Thu Sep 22 20:46:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Put in correct dependency order of configure.in
		lines.

Wed Jul  6 13:26:59 1994  Mark Eichin  (eichin@cygnus.com)

	* gmt_mktime.c (gmt_mktime): New file, new function. Similar to
	POSIX mktime, but always works in GMT.
	configure.in, Makefile.in: build gmt_mktime.

Wed Jun 22 15:49:30 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* locate_kdc.c (krb5_locate_kdc): Fixed default port numbers so
	they are loaded in network byte order instead of host byte order.

