@@ -1,3 +1,8 @@
+Fri Oct  7 13:23:18 1994  Theodore Y. Ts'o  (tytso@dcl)
+
+	* lock_file.c: Use POSIX_FILE_LOCKS if _POSIX_VERSION is defined
+		in unistd.h
+
 Thu Sep 22 20:46:08 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* configure.in: Put in correct dependency order of configure.in
